--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rate-limit-promise-pool",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A class to run a group of promises while keeping the number running at one time and the minimum time between each one consistent",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "MIT"
